[project]
name = "notification-relay"
version = "0.1.0"
description = "Internal HTTP notification relay service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "prisma>=0.13.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "asgi-lifespan>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
